Ajout d'une page de test
J'y ai incorporé un graphique générique pour tester les extends et grilles Bootstrap

--- a/src/main/templates/layout.html
+++ b/src/main/templates/layout.html
@@ -45,7 +45,7 @@
   <header id="header" class="header fixed-top d-flex align-items-center">
 
     <div class="d-flex align-items-center justify-content-between">
-      <a href="index.html" class="logo d-flex align-items-center">
+      <a href="{% url 'index' %}" class="logo d-flex align-items-center">
         <img src="assets/img/logo.png" alt="">
         <span class="d-none d-lg-block">NiceAdmin</span>
       </a>
@@ -506,10 +506,10 @@
     </ul>
 
   </aside><!-- End Sidebar-->
-
+  <main id="main" class="main">
     {% block main %}
     {% endblock %}
-  
+  </main> 
   <!-- ======= Footer ======= -->
   <footer id="footer" class="footer">
     <div class="copyright">
