problème affichage Résolu
Le problème a été résolu sur le layout en comparant les fichiers, layout et test.html.

Son origine ? En fait c'est Idriss qui m'avais demandé d'ajouter une balise en trop

--- a/src/main/templates/layout.html
+++ b/src/main/templates/layout.html
@@ -293,8 +293,8 @@
             </a>
           </li>
           <li>
-            <a href="components-accordion.html">
-              <i class="bi bi-circle"></i><span>Accordion</span>
+            <a href="{% url 'test' %}" >
+              <i class="bi bi-circle" ></i><span>Page de Test</span>
             </a>
           </li>
           <li>
@@ -506,10 +506,10 @@
     </ul>
 
   </aside><!-- End Sidebar-->
-  <main id="main" class="main">
+  
     {% block main %}
     {% endblock %}
-  </main> 
+   
   <!-- ======= Footer ======= -->
   <footer id="footer" class="footer">
     <div class="copyright">
