--- a/src/dashboard/templates/test.html
+++ b/src/dashboard/templates/test.html
@@ -7,7 +7,8 @@
 
 
 {% block main %}
-{% comment %} <div class="pagetitle">Page de Test</div>
+<main id="main" class="main">
+<div class="pagetitle">Page de Test</div>
 <section class="section dashboard">
     <div class="row">
         <div class="col-12">
@@ -66,7 +67,7 @@
             </div>
         </div>
     </div>
-</section> {% endcomment %}
-
+</section>
+</main>
 
 {% endblock %}
