--- a/src/dashboard/templates/index.html
+++ b/src/dashboard/templates/index.html
@@ -380,7 +380,7 @@
             </div>
 
             <div class="card-body">
-              <h5 class="card-title">Recent Activity <span>| Today</span></h5>
+              <h5 class="card-title">Activités récentes<span>| Today</span></h5>
 
               <div class="activity">
 
