--- a/src/main/templates/layout.html
+++ b/src/main/templates/layout.html
@@ -47,7 +47,7 @@
       <div class="d-flex align-items-center justify-content-between">
         <a href="{% url 'index' %}" class="logo d-flex align-items-center">
           <img src="assets/img/logo.png" alt="">
-          <span class="d-none d-lg-block">NiceAdmin</span>
+          <span class="d-none d-lg-block">Olist</span>
         </a>
         <i class="bi bi-list toggle-sidebar-btn"></i>
       </div><!-- End Logo -->
@@ -70,7 +70,7 @@
           
           <li class="nav-item dropdown">
             
-
+            
             
             <ul class="dropdown-menu dropdown-menu-end dropdown-menu-arrow notifications">
               <li class="dropdown-header">
@@ -270,8 +270,8 @@
         </li><!-- End Dashboard Nav -->
         
         <li class="nav-item">
-          <a class="nav-link " data-bs-target="#components-nav" data-bs-toggle="collapse" href="#">
-            <i class="bi bi-menu-button-wide"></i><span>Components</span><i class="bi bi-chevron-down ms-auto"></i>
+          <a class="nav-link " data-bs-target="#components-nav" data-bs-toggle="collapse" href="{% url 'test' %}">
+            <i class="bi bi-menu-button-wide"></i><span>Graphiques</span><i class="bi bi-chevron-down ms-auto"></i>
           </a>
           <ul id="components-nav" class="nav-content collapse show" data-bs-parent="#sidebar-nav">
             <li>
@@ -288,12 +288,12 @@
           </a>
           <ul id="tables-nav" class="nav-content collapse " data-bs-parent="#sidebar-nav">
             <li>
-              <a href="tables-general.html">
-                <i class="bi bi-circle"></i><span>General Tables</span>
+              <a href="{%url 'general'%}">
+                <i class="bi bi-circle"></i><span>Tables générales</span>
               </a>
             </li>
             <li>
-              <a href="tables-data.html">
+              <a href="{%url 'data'%}">
                 <i class="bi bi-circle"></i><span>Data Tables</span>
               </a>
             </li>
@@ -312,44 +312,6 @@
             </li>
           </ul>
         </li><!-- End Charts Nav -->
-        
-        <li class="nav-heading">Pages</li>
-        
-        <li class="nav-item">
-          <a class="nav-link collapsed" href="users-profile.html">
-            <i class="bi bi-person"></i>
-            <span>Profile</span>
-          </a>
-        </li><!-- End Profile Page Nav -->
-        
-        <li class="nav-item">
-          <a class="nav-link collapsed" href="pages-register.html">
-            <i class="bi bi-card-list"></i>
-            <span>Register</span>
-          </a>
-        </li><!-- End Register Page Nav -->
-        
-        <li class="nav-item">
-          <a class="nav-link collapsed" href="pages-login.html">
-            <i class="bi bi-box-arrow-in-right"></i>
-            <span>Login</span>
-          </a>
-        </li><!-- End Login Page Nav -->
-        
-        <li class="nav-item">
-          <a class="nav-link collapsed" href="pages-error-404.html">
-            <i class="bi bi-dash-circle"></i>
-            <span>Error 404</span>
-          </a>
-        </li><!-- End Error 404 Page Nav -->
-        
-        <li class="nav-item">
-          <a class="nav-link collapsed" href="pages-blank.html">
-            <i class="bi bi-file-earmark"></i>
-            <span>Blank</span>
-          </a>
-        </li><!-- End Blank Page Nav -->
-        
       </ul>
       
     </aside><!-- End Sidebar-->
