Correction du fichier BDD Jupiter
Fredy est revenu l'après-midi et à corrigé son erreur qui nous a fait perdre beaucoup de temps et d'énergie lors du débogage de ce matin

--- a/src/dashboard/templates/layout/layout.html
+++ b/src/dashboard/templates/layout/layout.html
@@ -344,10 +344,11 @@
     <script src="{%static 'assets/vendor/simple-datatables/simple-datatables.js' %}"></script>
     <script src="{%static 'assets/vendor/tinymce/tinymce.min.js' %}"></script>
     <script src="{%static 'assets/vendor/php-email-form/validate.js' %}"></script>
+    <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
     
     <!-- Template Main JS File -->
     <script src="{%static 'assets/js/main.js' %}"></script>
-    {% block script_js %}{% endblock  %}
+    {% block script_js %}{% endblock %}
     
   </body>
   
