--- a/src/dashboard/templates/pages/index.html
+++ b/src/dashboard/templates/pages/index.html
@@ -74,7 +74,7 @@
                 </div>
 
                 <div class="card-body">
-                  <h5 class="card-title">Revenue <span>| This Month</span></h5>
+                  <h5 class="card-title">Chiffre d'affaire<span></span></h5>
 
                   <div class="d-flex align-items-center">
                     <div class="card-icon rounded-circle d-flex align-items-center justify-content-center">
