--- a/src/dashboard/templates/pages/test.html
+++ b/src/dashboard/templates/pages/test.html
@@ -14,7 +14,10 @@
         <div class="col-12">
             <div class="card">
                 <div class="card-body"> 
-                    <div class="card-title">Test de l'intégration d'un Chart dans une grille</div>               
+                    <div class="card-title">Test de l'intégration d'un Chart dans une grille</div> 
+                    <div>
+                        <button type="submit" class="btn btn-success rounded-5" onclick="MaFonction()">Bouton de test Ajax</button>
+                    </div>      
                             <div>
                                 <canvas id="myChart"></canvas>
                                 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
@@ -27,7 +30,7 @@
                                     data: {
                                         labels: ['Blue', 'Red', 'Yellow', 'Green', 'Purple', 'Orange'],
                                         datasets: [{
-                                            label: 'Nombre de Votes pour Fredy',
+                                            label: 'Nombre de Votes',
                                             data: [65, 59, 80, 81, 56, 55, 40],
                                             backgroundColor: [
                                             'rgba(255, 99, 132, 0.2)',
@@ -62,7 +65,6 @@
                             
                         </div>
                     </div>
-                    
                 </div>
             </div>
         </div>
@@ -70,4 +72,7 @@
 </section>
 </main>
 
+{% block script_js %}
+<script src="{%static 'assets/js/second.js' %}"></script>
+{% endblock %}
 {% endblock %}
