--- a/src/dashboard/templates/pages/test.html
+++ b/src/dashboard/templates/pages/test.html
@@ -24,13 +24,15 @@
                             </div>
                             
                             <script>
+                                const var_data = "{{mydata|safe}}";
+                                console.log(var_data)
                                 const ctx = document.getElementById('myChart');
                                 new Chart(ctx, {
                                     type: 'bar',
                                     data: {
                                         labels: ['Blue', 'Red', 'Yellow', 'Green', 'Purple', 'Orange'],
                                         datasets: [{
-                                            label: 'Nombre de Votes',
+                                            label: 'Nombre de clients',
                                             data: [65, 59, 80, 81, 56, 55, 40],
                                             backgroundColor: [
                                             'rgba(255, 99, 132, 0.2)',
